# mycloset

./: .env.example  .gitignore  CLAUDE_PROJECT_PROMPT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_models.py  0002_add_wear_logs.py
apps/api/src/: config.py  database.py  dependencies.py  main.py
apps/api/src/models/: __init__.py  garment.py  user.py  wear_log.py
apps/api/src/routers/: auth.py  garments.py  recommendations.py  style.py  tryon.py  wear_logs.py
apps/api/src/schemas/: garment.py  recommendation.py  user.py  wear_log.py
apps/api/src/services/: queue_service.py  recommendation_service.py  storage_service.py  style_service.py  tryon_service.py  url_scraper.py
apps/api/src/utils/: security.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth.py  test_garments.py  test_recommendations.py  test_style.py
apps/api/tests/unit/: test_recommendation.py  test_url_scraper.py
apps/web/: .env.local.example  next.config.ts  package.json
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/closet/: page.tsx
apps/web/src/app/garments/[id]/: page.tsx
apps/web/src/app/garments/[id]/edit/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/outfit/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/app/style-report/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/components/closet/: clothing-card.tsx
apps/web/src/components/layout/: bottom-nav.tsx  header.tsx
apps/web/src/components/ui/: button.tsx  card.tsx
apps/web/src/contexts/: auth-context.tsx
apps/web/src/lib/: api-client.ts  constants.ts
apps/web/src/types/: index.ts
infra/docker/: Dockerfile.api  Dockerfile.worker
workers/image-processor/: pyproject.toml
workers/image-processor/src/: config.py  main.py  storage.py
workers/image-processor/src/models/: garment.py
workers/image-processor/src/tasks/: process_image.py
