[project]
name = "closetiq-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "arq>=0.26.0",
    "rembg[cpu]>=2.0.0",
    "boto3>=1.34.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
